--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="2.0.123" targetFramework="net461" />
+  <package id="FirebirdSql.Data.FirebirdClient" version="8.5.4" targetFramework="net461" />
   <package id="MaterialSkin.2" version="2.3.1" targetFramework="net461" />
   <package id="MetroFramework" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.RunTime" version="1.2.0.3" targetFramework="net461" />
+  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
