--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.123" targetFramework="net461" />
+  <package id="DotNetZip" version="1.16.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="EntityFramework.Firebird" version="8.5.4" targetFramework="net48" />
   <package id="Extended.Wpf.Toolkit" version="4.3.0" targetFramework="net48" />
@@ -11,6 +12,8 @@
   <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.RunTime" version="1.2.0.3" targetFramework="net461" />
   <package id="OpenDialog" version="1.1.1" targetFramework="net48" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
   <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
